
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fbuf ;
typedef int FILE ;


 int fclose (int *) ;
 int * fgets (char*,int,int *) ;
 int * fopen (char*,char*) ;
 int memset (char*,int ,int) ;
 int perror (char*) ;
 scalar_t__ strlen (char*) ;
 scalar_t__ strstr (char*,char*) ;

int check_smaep() {
 FILE *proc_cpuinfo;
 char fbuf[512];

 proc_cpuinfo = fopen("/proc/cpuinfo", "r");

 if (proc_cpuinfo < 0) {
  perror("fopen");
  return -1;
 }

 memset(fbuf, 0, sizeof(fbuf));

 while(fgets(fbuf, 512, proc_cpuinfo) != ((void*)0)) {
  if (strlen(fbuf) == 0)
   continue;

  if (strstr(fbuf, "smap") || strstr(fbuf, "smep")) {
   fclose(proc_cpuinfo);
   return -1;
  }
 }

 fclose(proc_cpuinfo);
 return 0;
}
